--- a/src/template.eml.html
+++ b/src/template.eml.html
@@ -1,3 +1,5 @@
+let backtest_button_js = Util.read_file_as_string "src/javascript/backtest_button.js"
+
 let render data =
 <html>
   <head>
@@ -13,12 +15,13 @@ let render data =
       var plotData = <%s! data%>;
       Plotly.newPlot('plot', plotData.data, plotData.layout);
     </script>
-    <div style="display: grid; place-items: center">
+    <div id='backtest_button' style="display: grid; place-items: center">
       <h1 class = "text-3xl font-bold text-center mt-5">Wow, my own custom div!</h1>
       <p class = "text-center">Can I put a p in it?</p>
-<button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
-  Button
-</button>
+      <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+        Run Backtest
+      </button>
+      <script><%s! backtest_button_js%></script>
     </div>
   </body>
 </html>
