--- a/src/template.eml.html
+++ b/src/template.eml.html
@@ -1,6 +1,7 @@
 let backtest_button_js = Util.read_file_as_string "src/javascript/backtest_button.js"
 let live_button_js = Util.read_file_as_string "src/javascript/live_button.js"
 let graceful_exit_js = Util.read_file_as_string "src/javascript/graceful_exit.js"
+let plotly_graph_js = Util.read_file_as_string "src/javascript/plotly_graph_js.js"
 
 let render data =
 <html>
@@ -14,8 +15,8 @@ let render data =
       <div id='plot' class="mt-5"></div>
     </div>
     <script>
-      var plotData = <%s! data%>;
-      Plotly.newPlot('plot', plotData.data, plotData.layout);
+      // var plotData = <%s! data%>;
+      // Plotly.newPlot('plot', plotData.data, plotData.layout);
     </script>
     <div id='backtest_button' style="display: grid; place-items: center">
       <h1 class = "text-3xl font-bold text-center mt-5">Run a backtest</h1>
