--- a/src/template.eml.html
+++ b/src/template.eml.html
@@ -12,7 +12,7 @@ let render data =
   <body>
     <div class="container mx-auto">
       <h1 class="text-3xl font-bold text-center mt-5">Plotly Graph Example</h1>
-      <div id='plot' class="mt-5"></div>
+      <div id='graph' class="mt-5"></div>
     </div>
     <script>
       // var plotData = <%s! data%>;
