--- a/src/template.eml.html
+++ b/src/template.eml.html
@@ -3,7 +3,7 @@ let live_button_js = Util.read_file_as_string "src/javascript/live_button.js"
 let graceful_exit_js = Util.read_file_as_string "src/javascript/graceful_exit.js"
 let plotly_graph_js = Util.read_file_as_string "src/javascript/plotly_graph.js"
 
-let render data =
+let render () =
 <html>
   <head>
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
@@ -15,8 +15,6 @@ let render data =
       <div id='graph' class="mt-5"></div>
     </div>
     <script>
-      // var plotData = <%s! data%>;
-      // Plotly.newPlot('plot', plotData.data, plotData.layout);
       <%s! plotly_graph_js%>
     </script>
     <div id='backtest_button' style="display: grid; place-items: center">
