--- a/src/template.eml.html
+++ b/src/template.eml.html
@@ -1,9 +1,8 @@
 let backtest_button_js = Util.read_file_as_string "src/javascript/backtest_button.js"
 let live_button_js = Util.read_file_as_string "src/javascript/live_button.js"
 let graceful_exit_js = Util.read_file_as_string "src/javascript/graceful_exit.js"
-let plotly_graph_js = Util.read_file_as_string "src/javascript/plotly_graph.js"
 
-let render () =
+let render endpoint =
 <html>
   <head>
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
@@ -14,8 +13,9 @@ let render () =
       <h1 class="text-3xl font-bold text-center mt-5">Plotly Graph Example</h1>
       <div id='graph' class="mt-5"></div>
     </div>
-    <script>
-      <%s! plotly_graph_js%>
+    <script type="module">
+      import { fetchAndRender } from "src/javascript/plotly_graph.js";
+      fetchAndRender(<%s endpoint %>);
     </script>
     <div id='backtest_button' style="display: grid; place-items: center">
       <h1 class = "text-3xl font-bold text-center mt-5">Run a backtest</h1>
