fix: properly render multiple graphs

--- a/src/multitemplate.eml.html
+++ b/src/multitemplate.eml.html
@@ -10,7 +10,7 @@ let render endpoint =
   </head>
   <body>
     <div class="container mx-auto">
-      <h1 class="text-3xl font-bold text-center mt-5">Plotly Graph Example</h1>
+      <h1 class="text-3xl font-bold text-center mt-5">Price/Order History</h1>
       <div id='graph' class="mt-5"></div>
     </div>
     <script type="module">
