--- a/static/index.html
+++ b/static/index.html
@@ -9,28 +9,9 @@
       <div id='graph' class="mt-5"></div>
     </div>
     <script type="module">
+      console.log("index.html");
       import { fetchAndRenderAll } from "../lib/javascript/plotly_graph.js";
       fetchAndRenderAll();
     </script>
-    <div id='backtest_button' style="display: grid; place-items: center">
-      <h1 class = "text-3xl font-bold text-center mt-5">Run a backtest</h1>
-      <p class = "text-center">Need to configure the selected backtest</p>
-      <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
-        Run Backtest
-      </button>
-    </div>
-    <div id='live_button' style="display: grid; place-items: center">
-      <h1 class = "text-3xl font-bold text-center mt-5">Run live algorithm</h1>
-      <p class = "text-center">Need to configure the selected strategy</p>
-      <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
-        Run Live
-      </button>
-    </div>
-    <div id='graceful_exit' style="display: grid; place-items: center">
-      <h1 class = "text-3xl font-bold text-center mt-5">Gracefully quit the run</h1>
-      <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
-        Graceful Quit
-      </button>
-    </div>
   </body>
 </html>
