--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!-- <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> -->
-    <script type='module' src='/static/plotly_latest.js'></script>
+    <script type='module' src='./plotly_latest.js'></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   </head>
   <body>
@@ -11,7 +11,7 @@
     </div>
     <script type="module">
       console.log("index.html");
-      import { fetchAndRenderAll } from "/static/plotly_graph.js";
+      import { fetchAndRenderAll } from "./plotly_graph.js";
       fetchAndRenderAll();
     </script>
   </body>
