--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <!-- <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> -->
-    <script type='module' src='./plotly_latest.js'></script>
+    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+    <!-- <script type='module' src='./plotly_latest.js'></script> -->
+    <!-- <script type='module' src='./plotly_graph.js'></script> -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   </head>
   <body>
