--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container mx-auto">
-      <h1 class="text-3xl font-bold text-center mt-5">Price/Order History</h1>
+      <h1 class="text-3xl font-bold text-center mt-5">Portolio Value/Orders</h1>
       <div id='graph' class="mt-5"></div>
     </div>
     <script type="module">
