feat: display single ticker charts

--- a/static/single.html
+++ b/static/single.html
@@ -12,8 +12,8 @@
     </div>
     <script type="module">
       console.log("index.html");
-      import { top_all } from "./plotly_graph.js";
-      top_all();
+      import { top_one } from "./plotly_graph.js";
+      top_one();
     </script>
   </body>
 </html>
