--- a/static/index.html
+++ b/static/index.html
@@ -1,248 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Longleaf C&C Dashboard</title>
+    <title>Longleaf C&C</title>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background: #f5f7fa;
-        }
-        .dashboard {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .header {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        .panel {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            overflow: hidden;
-        }
-        .panel-header {
-            background: #f8f9fa;
-            padding: 15px 20px;
-            border-bottom: 1px solid #e9ecef;
-            display: flex;
-            justify-content: between;
-            align-items: center;
-        }
-        .panel-content {
-            padding: 20px;
-        }
-        .btn {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            margin: 2px;
-            font-size: 14px;
-        }
-        .btn:hover {
-            background: #0056b3;
-        }
-        .btn-sm {
-            padding: 4px 8px;
-            font-size: 12px;
-        }
-        .btn-success {
-            background: #28a745;
-        }
-        .btn-success:hover {
-            background: #1e7e34;
-        }
-        pre {
-            background: #f8f9fa;
-            padding: 15px;
-            border-radius: 4px;
-            overflow-x: auto;
-            font-size: 12px;
-            margin: 0;
-            border: 1px solid #e9ecef;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: 500;
-        }
-        select, input {
-            width: 100%;
-            padding: 8px 12px;
-            border: 1px solid #ced4da;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .text-success {
-            color: #28a745;
-        }
-        .text-danger {
-            color: #dc3545;
-        }
-        .loading {
-            color: #6c757d;
-            font-style: italic;
-        }
-        .status-indicator {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 8px;
-        }
-        .status-connected {
-            background: #28a745;
-        }
-        .status-disconnected {
-            background: #dc3545;
-        }
-    </style>
 </head>
 <body>
-    <div class="dashboard" x-data="dashboard()" x-init="init()">
-        
-        <!-- Header -->
-        <div class="header">
-            <h1>
-                <span class="status-indicator" :class="connected ? 'status-connected' : 'status-disconnected'"></span>
-                Longleaf Trading Platform C&C
-            </h1>
-            <p>Command & Control Dashboard for algorithmic trading operations</p>
-        </div>
-
-        <!-- Main Grid -->
-        <div class="grid">
-            
-            <!-- Server Status -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h3>Server Status</h3>
-                    <button class="btn btn-sm" @click="fetchStatus()">Refresh</button>
-                </div>
-                <div class="panel-content">
-                    <div x-show="status.loading" class="loading">Loading...</div>
-                    <div x-show="status.error" class="text-danger" x-text="status.error"></div>
-                    <div x-show="status.data && !status.loading">
-                        <pre x-text="status.data"></pre>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Current Settings -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h3>Current Settings</h3>
-                    <button class="btn btn-sm" @click="fetchSettings()">Refresh</button>
-                </div>
-                <div class="panel-content">
-                    <div x-show="settings.loading" class="loading">Loading...</div>
-                    <div x-show="settings.error" class="text-danger" x-text="settings.error"></div>
-                    <div x-show="settings.data && !settings.loading">
-                        <pre x-text="JSON.stringify(settings.data, null, 2)"></pre>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Available Strategies -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h3>Available Strategies</h3>
-                    <button class="btn btn-sm" @click="fetchStrategies()">Refresh</button>
-                </div>
-                <div class="panel-content">
-                    <div x-show="strategies.loading" class="loading">Loading...</div>
-                    <div x-show="strategies.error" class="text-danger" x-text="strategies.error"></div>
-                    <div x-show="strategies.data && !strategies.loading">
-                        <div x-text="`${strategies.data.length} strategies available`" class="text-success"></div>
-                        <pre x-text="JSON.stringify(strategies.data, null, 2)"></pre>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Data Files -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h3>Data Files</h3>
-                    <button class="btn btn-sm" @click="fetchData()">Refresh</button>
-                </div>
-                <div class="panel-content">
-                    <div x-show="dataFiles.loading" class="loading">Loading...</div>
-                    <div x-show="dataFiles.error" class="text-danger" x-text="dataFiles.error"></div>
-                    <div x-show="dataFiles.data && !dataFiles.loading">
-                        <div x-text="`${dataFiles.data.length} data files found`" class="text-success"></div>
-                        <pre x-text="JSON.stringify(dataFiles.data, null, 2)"></pre>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <!-- Strategy Control -->
-        <div class="panel">
-            <div class="panel-header">
-                <h3>Strategy Control</h3>
-            </div>
-            <div class="panel-content">
-                <div class="form-group">
-                    <label>Select Strategy:</label>
-                    <select x-model="selectedStrategy" :disabled="strategies.loading || !strategies.data">
-                        <option value="">-- Select Strategy --</option>
-                        <template x-for="strategy in strategies.data" :key="strategy">
-                            <option :value="strategy" x-text="strategy"></option>
-                        </template>
-                    </select>
-                </div>
-                <button class="btn btn-success" @click="setStrategy()" :disabled="!selectedStrategy || strategyResult.loading">
-                    <span x-show="strategyResult.loading">Setting...</span>
-                    <span x-show="!strategyResult.loading">Set Strategy</span>
-                </button>
-                <div x-show="strategyResult.success" class="text-success" x-text="strategyResult.success"></div>
-                <div x-show="strategyResult.error" class="text-danger" x-text="strategyResult.error"></div>
-            </div>
-        </div>
-
-        <!-- API Testing -->
-        <div class="panel">
-            <div class="panel-header">
-                <h3>API Endpoint Testing</h3>
-            </div>
-            <div class="panel-content">
-                <div style="display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 15px;">
-                    <button class="btn btn-sm" @click="testEndpoint('/status')">GET /status</button>
-                    <button class="btn btn-sm" @click="testEndpoint('/settings')">GET /settings</button>
-                    <button class="btn btn-sm" @click="testEndpoint('/strategies')">GET /strategies</button>
-                    <button class="btn btn-sm" @click="testEndpoint('/data')">GET /data</button>
-                    <button class="btn btn-sm" @click="testEndpoint('/options')">GET /options</button>
-                </div>
-                <div x-show="apiTest.loading" class="loading">Testing endpoint...</div>
-                <div x-show="apiTest.result">
-                    <pre x-text="apiTest.result"></pre>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
+    <div id="app"></div>
     <script src="static/script.js"></script>
 </body>
 </html>
