feat: improve overview controls

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Longleaf Algorithmic Trading Platform Control Interface"
     />
-    <title>🍃 Longleaf Control Dashboard</title>
+    <title>Longleaf Control Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
